v1.3.1
- FIX: WooCommerce - Content header issue on Shop page.

v1.3.0
- NEW: Content Header — Introducing "Content Header", per-page configurable set of page title, breadcrumb, and other elements.
- NEW: Hero Section — Replace the former "Page Header" section.
- NEW: Blog - Add new dedicated Single Post Page options (formerly uses the same layout as "Default" post layout for archives page).
- NEW: Page - Add new dedicated Single Static Page options (formerly uses the same layout as "Default" post layout for archives page).
- NEW: Breadcrumb — Theme's native breadcrumb.
- NEW: Header Elements — Add Breadcrumb element to Header.
- NEW: Header Elements — Add new options to show Shopping Cart's amount and its responsive visibility.
- NEW: Social Icons — Add more social icons: WordPress, Messenger, Skype, Slack, Telegram, WhatsApp, GitLab, Bitbucket.
- NEW: Sidebar — Add new option to set widget title tag (h2 / h3 / h4 / div) for custom SEO needs.
- NEW: Footer Widgets Bar — Add new option to set widget title tag (h2 / h3 / h4 / div) for custom SEO needs.
- NEW: Gutenberg — Add new theme supports for Gutenberg features: theme font sizes, custom line height, custom units, custom cover block padding, custom link color.
- NEW: Footer Elements — Add new element: HTML (accepts HTML tags and shortcode).
- NEW: Blog — Thumbnail size option for blog post layouts.
- NEW: Blog — "Content or excerpt" option for default post layout.
- NEW: Customizer — Border radius and Box shadow options for posts layout, sidebar.
- NEW: WooCommerce compatibility - Add new option to change the cart cross sells position.
- NEW: WPML Compatibility — Add WPML configuration file (`wpml-config.xml`) for automatic WPML integration.
- NEW: Page Template - Page Builder with Container — Page template for page builders that doesn't have their own content container functionalities, such as Visual Composer, Site Origin, etc.