@@ -27,7 +27,7 @@ $add['woocommerce_demo_store_notice_text_color'] = '';
  * ====================================================
  */
 
-$add['product_single_content_header'] = array( 'title', 'archive-description' );
+$add['product_archive_content_header'] = array( 'title' );
 
 $add['woocommerce_index_posts_per_page'] = 12;
 $add['woocommerce_index_grid_columns'] = 4;
